# ana-stanojevic.com

./: .gitignore  README.md  package-lock.json  render.yml
.github/workflows/: ci.yml
intake-api/: .env.local  main.py  pyproject.toml
scripts/: check.sh
site/: .env.local  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
site/src/: App.tsx  config.ts  main.tsx  vite-env.d.ts
site/src/components/: BuildSection.tsx  Contact.tsx  StaticSections.tsx
site/src/lib/: contactIntake.ts
site/src/styles/: site.css
